WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208370
LocalSampleBufferDisplayLayer is not computing the correct bounds/position in GPUProcess
https://bugs.webkit.org/show_bug.cgi?id=208370
Summary
LocalSampleBufferDisplayLayer is not computing the correct bounds/position in...
youenn fablet
Reported
2020-02-28 03:20:59 PST
LocalSampleBufferDisplayLayer is not computing the correct bounds/position in GPUProcess
Attachments
Patch
(17.66 KB, patch)
2020-02-28 04:17 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(16.43 KB, patch)
2020-02-28 05:16 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-02-28 04:17:41 PST
Created
attachment 391972
[details]
Patch
youenn fablet
Comment 2
2020-02-28 05:16:21 PST
Created
attachment 391974
[details]
Patch
Eric Carlson
Comment 3
2020-02-28 09:12:44 PST
Comment on
attachment 391974
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=391974&action=review
> Source/WebKit/WebProcess/GPU/webrtc/SampleBufferDisplayLayer.cpp:59 > + if (!m_connection->sendSync(Messages::RemoteSampleBufferDisplayLayerManager::CreateLayer { m_identifier, hideRootLayer, size }, Messages::RemoteSampleBufferDisplayLayerManager::CreateLayer::Reply { contextId }, 0))
Could this be made async by allocating a local CALayer for m_videoLayer and inserting the CALayerHost layer as a child once you have the remote context ID?
youenn fablet
Comment 4
2020-02-28 10:07:44 PST
(In reply to Eric Carlson from
comment #3
)
> Comment on
attachment 391974
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=391974&action=review
> > > Source/WebKit/WebProcess/GPU/webrtc/SampleBufferDisplayLayer.cpp:59 > > + if (!m_connection->sendSync(Messages::RemoteSampleBufferDisplayLayerManager::CreateLayer { m_identifier, hideRootLayer, size }, Messages::RemoteSampleBufferDisplayLayerManager::CreateLayer::Reply { contextId }, 0)) > > Could this be made async by allocating a local CALayer for m_videoLayer and > inserting the CALayerHost layer as a child once you have the remote context > ID?
We should fix this at some point. Your approach sounds good. We could also make this async at WebCore level.
WebKit Commit Bot
Comment 5
2020-03-02 07:34:11 PST
Comment on
attachment 391974
[details]
Patch Clearing flags on attachment: 391974 Committed
r257709
: <
https://trac.webkit.org/changeset/257709
>
WebKit Commit Bot
Comment 6
2020-03-02 07:34:13 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2020-03-02 07:35:16 PST
<
rdar://problem/59950161
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug